# gtm-engineering-portfolio

./: .gitignore  README.md  linkedin-post.md  pitch.md  setup-repo.sh
account-research-agent/: README.md  skill.md
attribution-engine/: README.md  agent.md
geo-content-engine/: README.md
interactive-demos/: README.md
mcp-stack/: README.md  mcp.config.example.json
personalized-outbound/: README.md  skill-architecture.md
second-brain/: README.md
semantic-search-mcp/: .gitignore  README.md  pyproject.toml  weekly-link-digest.sh
semantic-search-mcp/specs/2026-07-20-link-suggestion-tool/: SPEC.md
semantic-search-mcp/specs/2026-07-20-link-suggestion-tool/evidence/: codebase-architecture.md  prior-art-pkm-link-suggestion.md  vault-link-density.md
semantic-search-mcp/specs/2026-07-20-link-suggestion-tool/meta/: _changelog.md  audit-findings.md  design-challenge.md
semantic-search-mcp/specs/reports-rag-mcp/: SPEC.md
semantic-search-mcp/src/reports_rag_mcp/: chunking.py  cli.py  indexer.py  linking.py  search.py  server.py
semantic-search-mcp/tests/: test_chunking.py  test_indexer.py  test_linking.py  test_search.py
