[project]
name = "reports-rag-mcp"
version = "0.1.0"
description = "Local semantic search MCP server over ~/.claude/reports"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "numpy>=2.5.1",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
reports-rag-mcp = "reports_rag_mcp.server:main"
reindex = "reports_rag_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reports_rag_mcp"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that load the real embedding model (first run downloads ~80MB, cached after)",
]
